---
source: src/symbol_table.rs
expression: "XmlWriter::new(&ast, &table).serialize()"
---
<?xml version="1.0" encoding="utf-8"?>
<unit>
  <scopes>
    <scope id="scope:0">
      <child ref="scope:1" />
    </scope>
    <scope id="scope:1" parent="scope:0">
      <child ref="scope:2" />
    </scope>
    <scope id="scope:2" parent="scope:1">
      <child ref="scope:3" />
    </scope>
    <scope id="scope:3" parent="scope:2" />
  </scopes>
  <symbols>
    <symbol id="sym:0" scope="scope:2">
      <statement ref="stmt:0" />
    </symbol>
    <symbol id="sym:1" scope="scope:3">
      <statement ref="stmt:1" />
    </symbol>
  </symbols>
  <ast>
    <identifiers>
      <ident id="ident:0">x</ident>
    </identifiers>
    <stmt id="stmt:0" line="1" column="1" start="0" len="10" scope="scope:1">
      <let>
        <identifier ref="ident:0" line="1" column="5" start="4" len="1">x</identifier>
        <expression line="1" column="9" start="8" len="1">
          <expr id="expr:0" line="1" column="9" start="8" len="1" scope="scope:1">
            <number>0</number>
          </expr>
        </expression>
      </let>
    </stmt>
    <stmt id="stmt:1" line="1" column="12" start="11" len="10" scope="scope:2">
      <let>
        <identifier ref="ident:0" line="1" column="16" start="15" len="1">x</identifier>
        <expression line="1" column="20" start="19" len="1">
          <expr id="expr:1" line="1" column="20" start="19" len="1" scope="scope:2">
            <number>1</number>
          </expr>
        </expression>
      </let>
    </stmt>
  </ast>
</unit>
